tools/tests/errors/surf_name_12.ki
# name resolution: undefined name used as an index expression
var xs = [10, 20, 30]
discard xs[pos]
